New Awesome polybar

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,14 +1,10 @@
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-;;
-;;	    ____        __      __
-;;	   / __ \____  / /_  __/ /_  ____ ______
-;;	  / /_/ / __ \/ / / / / __ \/ __ `/ ___/
-;;	 / ____/ /_/ / / /_/ / /_/ / /_/ / /
-;;	/_/    \____/_/\__, /_.___/\__,_/_/
-;;	              /____/
-;;
-;; Created By Aditya Shakya @adi1090x
-;;
+;; ┌────────────────────────────────────────────────────────────┐
+;; │░█▀█░█▀█░█░░░█░█░█▀▄░█▀█░█▀▄░░░░░░░░░█▀▀░█▀█░█▀█░█▀▀░▀█▀░█▀▀│
+;; │░█▀▀░█░█░█░░░░█░░█▀▄░█▀█░█▀▄░░░░▀░░░░█░░░█░█░█░█░█▀▀░░█░░█░█│
+;; │░▀░░░▀▀▀░▀▀▀░░▀░░▀▀░░▀░▀░▀░▀░░░░▀░░░░▀▀▀░▀▀▀░▀░▀░▀░░░▀▀▀░▀▀▀│
+;; │░Created░By░Aditya░Shakya░@adi1090x░░░░░░░░░░░░░░░░░░░░░░░░░│
+;; └────────────────────────────────────────────────────────────┘
+
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 ;; Global WM Settings
@@ -27,10 +23,10 @@ margin-top = 0
 ;; File Inclusion
 ; include an external file, like module file, etc.
 
+include-file = ~/.config/polybar/bars.ini
 include-file = ~/.config/polybar/colors.ini
 include-file = ~/.config/polybar/modules.ini
 include-file = ~/.config/polybar/user_modules.ini
-include-file = ~/.config/polybar/bars.ini
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -55,7 +51,7 @@ monitor-strict = false
 override-redirect = false
 
 ; Put the bar at the bottom of the screen
-bottom = false
+bottom = true
 
 ; Prefer fixed center position for the `modules-center` block
 ; When false, the center position will be based on the size of the other blocks.
@@ -65,28 +61,27 @@ fixed-center = true
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 width = 100%
-; height = 22
-height = 32
+height = 40
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
-; 50%:-10, this will result in an offset in the x or y direction
+; 50%:-10, this will result in an offset in the x or y direction 
 ; of 50% minus 10 pixels
 offset-x = 0%
 offset-y = 0%
 
 ; Background ARGB color (e.g. #f00, #ff992a, #ddff1023)
-background = ${color.bg}
+background = ${color.background}
 
 ; Foreground ARGB color (e.g. #f00, #ff992a, #ddff1023)
-foreground = ${color.fg}
+foreground = ${color.foreground}
 
 ; Background gradient (vertical steps)
 ;   background-[0-9]+ = #aarrggbb
-;;background-0 =
+;;background-0 = 
 
 ; Value used for drawing rounded corners
-; Note: This shouldn't be used together with border-size because the border
+; Note: This shouldn't be used together with border-size because the border 
 ; doesn't get rounded
 ; Individual top/bottom values can be defined using:
 ;   radius-{top,bottom}
@@ -97,8 +92,8 @@ radius-bottom = 0.0
 ; Individual values can be defined using:
 ;   {overline,underline}-size
 ;   {overline,underline}-color
-overline-size = 2
-overline-color = ${color.ac}
+line-size = 6
+line-color = ${color.background}
 
 ; Values applied to all borders
 ; Individual side values can be defined using:
@@ -111,8 +106,8 @@ overline-color = ${color.ac}
 ; the border is placed withing this area. So you effectively only have the
 ; following horizontal space on the bar:
 ;   width - border-right-size - border-left-size
-border-bottom-size = 0
-border-color = ${color.ac}
+border-top-size = 4
+border-top-color = ${color.primary}
 
 ; Number of spaces to add at the beginning/end of the bar
 ; Individual side values can be defined using:
@@ -122,69 +117,35 @@ padding = 0
 ; Number of spaces to add before/after each module
 ; Individual side values can be defined using:
 ;   module-margin-{left,right}
-module-margin-left = 1
-module-margin-right = 1
+module-margin-left = 0
+module-margin-right = 0
 
-; Text Fonts
-font-0 = Iosevka Nerd Font:style=Medium:size=11;3
-; Icons Fonts
-font-1 = icomoon\-feather:style=Medium:size=11;3
-; Powerline Glyphs
-font-2 = Iosevka Nerd Font:style=Medium:size=16;3
-; Larger font size for bar fill icons
-font-3 = Iosevka Nerd Font:style=Medium:size=12;3
-; Smaller font size for shorter spaces
-font-4 = Iosevka Nerd Font:style=Medium:size=7;3
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[bar/top]
-inherit = bar/main
+; Fonts are defined using <font-name>;<vertical-offset>
+; Font names are specified using a fontconfig pattern.
+;   font-0 = NotoSans-Regular:size=8;2
+;   font-1 = MaterialIcons:size=10
+;   font-2 = Termsynu:size=8;-1
+;   font-3 = FontAwesome:size=10
+; See the Fonts wiki page for more details
 
-; wm-restack = i3
-; override-redirect = true
+font-0 = "Iosevka Nerd Font:size=10;4"
+font-1 = "feather:size=10;3"
 
-; modules-left = menu right-end-top left-end-bottom i3 right-end-top left-end-bottom colors-switch right-end-top
-modules-left = menu colors-switch i3
-; modules-right = left-end-top updates right-end-bottom left-end-top temperature battery right-end-bottom left-end-top date right-end-bottom left-end-top keyboard sysmenu
-modules-right = updates temperature battery checknetwork date keyboard sysmenu
-modules-center = title
-enable-ipc = true
+; Modules are added to one of the available blocks
+;   modules-left = cpu ram
+;   modules-center = xwindow xbacklight
+;   modules-right = ipc clock
 
-[bar/bottom]
-inherit = bar/main
-bottom = true
+modules-left = launcher workspaces sep cpu sep memory
+modules-center = updates sep alsa mpd battery sep backlight
+modules-right = color-switch sep network sep date sysmenu
 
-; modules-left = mpd right-end-bottom left-end-top cpu memory filesystem right-end-bottom
-modules-center = cpu memory filesystem network
-; modules-right = left-end-bottom network right-end-top left-end-bottom volume brightness right-end-top left-end-bottom
-; modules-right = volume brightness
-modules-left = mpd
-
-enable-ipc = true
-
-tray-position = ${layout.tray-position}
-tray-padding = ${layout.tray-padding}
-tray-detached = ${layout.tray-detached}
-tray-maxsize = ${layout.tray-maxsize}
-tray-transparent = ${layout.tray-transparent}
-tray-background = ${layout.tray-background}
-tray-scale = ${layout.tray-scale}
-
-;; layout
-[layout]
-module-padding = 1
-
-;; Bars
-icon-font = 2
-;bar-format = %{T4}%fill%%indicator%%{F#dc404040}%empty%%{F-}%{T-}
-bar-format = %{T4}%fill%%indicator%%empty%%{F-}%{T-}
-bar-fill-icon = ﭳ
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 ; The separator will be inserted between the output of each module
 separator =
-
-; This value is used to add extra spacing between elements
-; @deprecated: This parameter will be removed in an upcoming version
-spacing = 1
 
 ; Opacity value between 0.0 and 1.0 used on fade in/out
 dim-value = 1.0
@@ -193,11 +154,11 @@ dim-value = 1.0
 ; If the value is empty or undefined, the atom value
 ; will be created from the following template: polybar-[BAR]_[MONITOR]
 ; NOTE: The placeholders are not available for custom values
-wm-name = i3
+wm-name = 
 
 ; Locale used to localize various module data (e.g. date)
 ; Expects a valid libc locale, for example: sv_SE.UTF-8
-locale =
+locale = 
 
 ; Position of the system tray window
 ; If empty or undefined, tray support will be disabled
@@ -215,26 +176,20 @@ tray-position = right
 tray-detached = false
 
 ; Tray icon max size
-tray-maxsize = 22
+tray-maxsize = 16
 
-; DEPRECATED! Since 3.3.0 the tray always uses pseudo-transparency
-; Enable pseudo transparency
-; Will automatically be enabled if a fully transparent
-; background color is defined using `tray-background`
-tray-transparent = false
-
-; Background color for the tray container
+; Background color for the tray container 
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
 ; By default the tray container will use the bar
 ; background color.
-tray-background = ${color.bg}
+tray-background = ${color.background}
 
 ; Tray offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 tray-offset-x = 0
 tray-offset-y = 0
 
 ; Pad the sides of each tray icon
-tray-padding = 1
+tray-padding = 0
 
 ; Scale factor for tray clients
 tray-scale = 1.0
@@ -248,20 +203,20 @@ tray-scale = 1.0
 ; Currently supported WM's:
 ;   bspwm
 ;   i3 (requires: `override-redirect = true`)
-wm-restack = i3
+;;wm-restack =
 
 ; Set a DPI values used when rendering text
 ; This only affects scalable fonts
-; dpi =
+; dpi = 
 
 ; Enable support for inter-process messaging
 ; See the Messaging wiki page for more details.
-;enable-ipc = true
+enable-ipc = true
 
 ; Fallback click handlers that will be called if
 ; there's no matching module handler found.
-click-left =
-click-middle =
+click-left = 
+click-middle = 
 click-right =
 scroll-up =
 scroll-down =
@@ -274,8 +229,8 @@ double-click-right =
 ; - default   : The default pointer as before, can also be an empty string (default)
 ; - pointer   : Typically in the form of a hand
 ; - ns-resize : Up and down arrows, can be used to indicate scrolling
-cursor-click =
-cursor-scroll =
+cursor-click = 
+cursor-scroll = 
 
 ;; WM Workspace Specific
 
@@ -286,14 +241,10 @@ cursor-scroll =
 ;;scroll-down = bspc desktop -f next.local
 
 ;i3
-;scroll-up = i3wm-wsnext
-;scroll-down = i3wm-wsprev
-;scroll-up = i3-msg workspace next_on_output
-;scroll-down = i3-msg workspace prev_on_output
-
-;openbox
-;awesome
-;etc
+;;scroll-up = i3wm-wsnext
+;;scroll-down = i3wm-wsprev
+;;scroll-up = i3-msg workspace next_on_output
+;;scroll-down = i3-msg workspace prev_on_output
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -312,10 +263,10 @@ throttle-output = 5
 throttle-output-for = 10
 
 ; Time in milliseconds that the input handler will wait between processing events
-throttle-input-for = 30
+;throttle-input-for = 30
 
 ; Reload upon receiving XCB_RANDR_SCREEN_CHANGE_NOTIFY events
-screenchange-reload = true
+screenchange-reload = false
 
 ; Compositing operators
 ; @see: https://www.cairographics.org/manual/cairo-cairo-t.html#cairo-operator-t
@@ -326,25 +277,17 @@ compositing-underline = over
 compositing-border = over
 
 ; Define fallback values used by all module formats
-format-foreground =
-format-background =
-format-underline =
-format-overline =
-format-spacing =
-format-padding =
-format-margin =
-format-offset =
+;format-foreground = 
+;format-background = 
+;format-underline =
+;format-overline =
+;format-spacing =
+;format-padding =
+;format-margin =
+;format-offset =
 
 ; Enables pseudo-transparency for the bar
 ; If set to true the bar can be transparent without a compositor.
 pseudo-transparency = false
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-;;	    __________  ______
-;;	   / ____/ __ \/ ____/
-;;	  / __/ / / / / /_
-;;	 / /___/ /_/ / __/
-;;	/_____/\____/_/
-;;
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
