--- a/i3/config
+++ b/i3/config
@@ -288,7 +288,7 @@ bindsym $mod+Shift+w mode "Move workspace"
 # --}
 
 # Lock screen
-bindsym $mod+9 exec --no-startup-id blurlock
+bindsym $mod+l exec --no-startup-id blurlock
 
 # Autostart applications
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
@@ -303,7 +303,7 @@ exec --no-startup-id setxkbmap -layout "us, gr" -option "grp:alt_shift_toggle"
 exec_always --no-startup-id sbxkb
 exec --no-startup-id start_conky_maia
 # exec --no-startup-id start_conky_green
-exec --no-startup-id xautolock -time 120 -locker blurlock
+# exec --no-startup-id xautolock -time 120 -locker blurlock
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
 
