--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -65,7 +65,7 @@ height = 40
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
-; 50%:-10, this will result in an offset in the x or y direction 
+; 50%:-10, this will result in an offset in the x or y direction
 ; of 50% minus 10 pixels
 offset-x = 0%
 offset-y = 0%
@@ -78,15 +78,15 @@ foreground = ${color.foreground}
 
 ; Background gradient (vertical steps)
 ;   background-[0-9]+ = #aarrggbb
-;;background-0 = 
+;;background-0 =
 
 ; Value used for drawing rounded corners
-; Note: This shouldn't be used together with border-size because the border 
+; Note: This shouldn't be used together with border-size because the border
 ; doesn't get rounded
 ; Individual top/bottom values can be defined using:
 ;   radius-{top,bottom}
-radius-top = 0.0
-radius-bottom = 0.0
+radius-top = 20.0
+radius-bottom = 20.0
 
 ; Under-/overline pixel size and argb color
 ; Individual values can be defined using:
@@ -139,9 +139,11 @@ font-1 = "feather:size=10;3"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = launcher workspaces sep cpu sep memory sep filesystem
-modules-center = updates sep alsa mpd battery sep backlight
-modules-right = color-switch sep network sep date sysmenu
+modules-left = launcher sep workspaces sep cpu sep memory sep filesystem
+; modules-center = updates sep alsa mpd battery sep backlight
+modules-center = title
+; modules-right = pulseaudio sep backlight sep battery sep date sep sysmenu
+modules-right = pulseaudio sep date sep sysmenu sep
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -155,11 +157,11 @@ dim-value = 1.0
 ; If the value is empty or undefined, the atom value
 ; will be created from the following template: polybar-[BAR]_[MONITOR]
 ; NOTE: The placeholders are not available for custom values
-wm-name = 
+wm-name =
 
 ; Locale used to localize various module data (e.g. date)
 ; Expects a valid libc locale, for example: sv_SE.UTF-8
-locale = 
+locale =
 
 ; Position of the system tray window
 ; If empty or undefined, tray support will be disabled
@@ -177,13 +179,13 @@ tray-position = right
 tray-detached = false
 
 ; Tray icon max size
-tray-maxsize = 16
+tray-maxsize = 20
 
-; Background color for the tray container 
+; Background color for the tray container
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
 ; By default the tray container will use the bar
 ; background color.
-tray-background = ${color.background}
+tray-background = ${color.background-alt}
 
 ; Tray offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 tray-offset-x = 0
@@ -208,7 +210,7 @@ tray-scale = 1.0
 
 ; Set a DPI values used when rendering text
 ; This only affects scalable fonts
-; dpi = 
+; dpi =
 
 ; Enable support for inter-process messaging
 ; See the Messaging wiki page for more details.
@@ -216,8 +218,8 @@ enable-ipc = true
 
 ; Fallback click handlers that will be called if
 ; there's no matching module handler found.
-click-left = 
-click-middle = 
+click-left =
+click-middle =
 click-right =
 scroll-up =
 scroll-down =
@@ -230,22 +232,8 @@ double-click-right =
 ; - default   : The default pointer as before, can also be an empty string (default)
 ; - pointer   : Typically in the form of a hand
 ; - ns-resize : Up and down arrows, can be used to indicate scrolling
-cursor-click = 
-cursor-scroll = 
-
-;; WM Workspace Specific
-
-; bspwm
-;;scroll-up = bspwm-desknext
-;;scroll-down = bspwm-deskprev
-;;scroll-up = bspc desktop -f prev.local
-;;scroll-down = bspc desktop -f next.local
-
-;i3
-;;scroll-up = i3wm-wsnext
-;;scroll-down = i3wm-wsprev
-;;scroll-up = i3-msg workspace next_on_output
-;;scroll-down = i3-msg workspace prev_on_output
+cursor-click =
+cursor-scroll =
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -276,16 +264,6 @@ compositing-foreground = over
 compositing-overline = over
 compositing-underline = over
 compositing-border = over
-
-; Define fallback values used by all module formats
-;format-foreground = 
-;format-background = 
-;format-underline =
-;format-overline =
-;format-spacing =
-;format-padding =
-;format-margin =
-;format-offset =
 
 ; Enables pseudo-transparency for the bar
 ; If set to true the bar can be transparent without a compositor.
