--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -788,16 +788,16 @@ toggle-off-foreground = ${color.red}
 ; If you use both a wired and a wireless network, just add 2 module definitions. For example
 [module/wired-network]
 type = internal/network
-interface = eth0
+interface = enp8s0
 
 [module/wireless-network]
 type = internal/network
-interface = wlp3s0
+interface = wlp1s0f0u3
 
 ; Normal Module
 [module/network]
 type = internal/network
-interface = wlan0
+interface = wlp1s0f0u4
 
 ; Seconds to sleep between updates
 ; Default: 1
@@ -1065,12 +1065,13 @@ type = internal/xwindow
 format = <label>
 format-padding = 2
 format-foreground = ${color.foreground-alt}
+format-background = ${color.background-alt}
 
 ; Available tokens:
 ;   %title%
 ; Default: %title%
 label = " %title%"
-label-maxlen = 30
+label-maxlen = 40
 
 ; Used instead of label when there is no window title
 label-empty = Desktop
