--- a/polybar/user_modules.ini
+++ b/polybar/user_modules.ini
@@ -71,9 +71,9 @@ type = custom/text
 content = 
 
 ; "content" has the same properties as "format-NAME"
-content-background = ${color.background}
+content-background = ${color.background-alt}
 content-foreground = ${color.foreground-alt}
-content-padding = 4
+content-padding = 3
 
 ; "click-(left|middle|right)" will be executed using "/usr/bin/env sh -c $COMMAND"
 click-left = ~/.config/polybar/scripts/launcher.sh &
@@ -90,9 +90,9 @@ click-right = ~/.config/polybar/scripts/color-switch.sh &
 type = custom/text
 content = 
 
-content-background = ${color.background}
+content-background = ${color.background-alt}
 content-foreground = ${color.foreground-alt}
-content-padding = 4
+content-padding = 3
 
 click-left = ~/.config/polybar/scripts/powermenu.sh &
 
