--- a/i3/config
+++ b/i3/config
@@ -187,6 +187,11 @@ bindsym $mod+Shift+6 move container to workspace $ws6; workspace $ws6
 bindsym $mod+Shift+7 move container to workspace $ws7; workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8; workspace $ws8
 
+for_window [all] title_window_icon padding 3px
+for_window [all] title_format "<b>%class</b>"
+# for_window [class="(?i)firefox"] title_format "<span foreground='red'>%class</span>"
+for_window [class="(?i)firefox"] title_format "<b>%class</b>"
+
 # Open applications on specific workspaces
 # assign [class="Thunderbird"] $ws1
 # assign [class="Pale moon"] $ws2
