--- a/i3/config
+++ b/i3/config
@@ -304,7 +304,7 @@ exec --no-startup-id xfce4-power-manager
 exec --no-startup-id pamac-tray
 exec --no-startup-id clipit
 # exec --no-startup-id blueman-applet
-exec --no-startup-id setxkbmap -layout "us, gr" -option "grp:alt_shift_toggle"
+exec --no-startup-id setxkbmap -rules evdev -model pc105 -layout "us,gr" -option "grp:alt_shift_toggle"
 exec_always --no-startup-id sbxkb
 exec --no-startup-id start_conky_maia
 # exec --no-startup-id start_conky_green
